fixed overflowing image

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ a {
   border: 1px solid rgb(29, 155, 239);
 }
 
-.search-bar:focus-within img{
+.search-bar:focus-within img {
   filter: brightness(0) saturate(100%) invert(49%) sepia(31%) saturate(1887%)
     hue-rotate(170deg) brightness(98%) contrast(92%);
 }
@@ -464,11 +464,13 @@ a {
   display: flex;
   gap: 2px;
   margin-top: 10px;
+  flex: 1;
 }
 
 .main__tweets-info__picture img {
-  width: 100%;
+  /* width:100%; */
   border-radius: 20px;
+  flex: 1;
 }
 
 .main__tweets-info__icon {
